Dockerize app with multi-stage builds and docker-compose